--- a/style.css
+++ b/style.css
@@ -6,8 +6,19 @@ body {
   max-width: 100%;
 }
 
-input, button {
+.title {
   font-size: 20px;
+  margin-bottom: 4px;
+}
+
+.description {
+  font-size: 14px;
+  margin-bottom: 10px;
+  color: #333;
+}
+
+input, button {
+  font-size: 18px;
   padding: 10px;
   width: 80%;
   max-width: 400px;
